# conan2_for_cpp_demo

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt  postinst
cmake/: colors.cmake  debug.cmake  git_hash.cmake  option.cmake  pack.cmake  static_check.cmake
config/: config.yaml
profiles/: jetson  pc
scripts/: build.sh  install_to_device.sh  pack.sh
service/: app.service
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp  command.h  config.h  logger.h  make_unique.h  singleton.h
src/test/: CMakeLists.txt  main.cpp  test_singleton.cpp
